// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build > native 1`] = `
Set {
  "!**/node_modules/**",
  "!**/miniprogram_npm/**",
  "!**/project.config.json/**",
  "!**/project.private.config.json/**",
  "!**/package.json/**",
  "!postcss.config.js",
  "!tailwind.config.js",
  "!dist/**/*",
  "**/*.wxss",
  "**/*.less",
  "**/*.sass",
  "**/*.scss",
  "**/*.wxml",
  "**/*.json",
  "**/*.js",
  "**/*.ts",
  "**/*.wxs",
}
`;

exports[`build > native-ts 1`] = `
Set {
  "!**/node_modules/**",
  "!**/miniprogram_npm/**",
  "!**/project.config.json/**",
  "!**/project.private.config.json/**",
  "!**/package.json/**",
  "!postcss.config.js",
  "!tailwind.config.js",
  "!dist/**/*",
  "miniprogram/**/*.wxss",
  "miniprogram/**/*.less",
  "miniprogram/**/*.sass",
  "miniprogram/**/*.scss",
  "miniprogram/**/*.wxml",
  "miniprogram/**/*.json",
  "miniprogram/**/*.js",
  "miniprogram/**/*.ts",
  "miniprogram/**/*.wxs",
}
`;
